--- a/.gitignore
+++ b/.gitignore
@@ -90,8 +90,8 @@ jspm_packages/
 # TernJS port file
 .tern-port
 
-# RefactoAgent specific
-.refactoagent/
+# Refactogent specific
+.refactogent/
 *.patch
 *.diff
 
