--- a/refactogent-starter/cli/tsconfig.json
+++ b/refactogent-starter/cli/tsconfig.json
@@ -6,7 +6,10 @@
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"]
   },
   "include": [
     "src"
