--- a/refactogent-starter/package.json
+++ b/refactogent-starter/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "refactoagent-starter",
+  "name": "refactogent-starter",
   "version": "0.1.0",
-  "description": "RefactoAgent development workspace with CLI and VS Code extension",
+  "description": "Refactogent development workspace with CLI and VS Code extension",
   "private": true,
   "workspaces": [
     "cli",
@@ -23,17 +23,17 @@
     "python",
     "go"
   ],
-  "author": "RefactoAgent Contributors",
+  "author": "Refactogent Contributors",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/khaliqgant/refactoagent.git",
-    "directory": "refactoagent-starter"
+    "url": "https://github.com/khaliqgant/refactogent.git",
+    "directory": "refactogent-starter"
   },
   "bugs": {
-    "url": "https://github.com/khaliqgant/refactoagent/issues"
+    "url": "https://github.com/khaliqgant/refactogent/issues"
   },
-  "homepage": "https://github.com/khaliqgant/refactoagent#readme",
+  "homepage": "https://github.com/khaliqgant/refactogent#readme",
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
