--- a/refactogent-starter/cli/package.json
+++ b/refactogent-starter/cli/package.json
@@ -50,7 +50,8 @@
   ],
   "dependencies": {
     "commander": "^12.1.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "ts-morph": "^20.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
