--- a/refactogent-starter/cli/package.json
+++ b/refactogent-starter/cli/package.json
@@ -54,6 +54,7 @@
     "ts-morph": "^20.0.0"
   },
   "devDependencies": {
+    "@jest/globals": "^30.1.2",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.30",
