--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "refactogent",
-  "version": "0.1.0",
+  "version": "0.4.0",
   "description": "Refactogent CLI - Safe, incremental code refactoring assistant",
   "main": "dist/index.js",
   "type": "module",
@@ -19,10 +19,10 @@
     "format": "prettier --write \"src/**/*.{ts,js,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json,md}\"",
     "clean": "rm -rf dist",
-    "check": "npm run format:check && npm run build:check && npm run lint && npm run test",
+    "check": "npm run format:check && npm run build:check && npm run test",
     "ci": "npm run clean && npm run check && npm run build",
-
-    "prepublishOnly": "npm run ci"
+    "publish-ready": "npm run clean && npm run build",
+    "prepublishOnly": "npm run publish-ready"
   },
   "keywords": [
     "refactoring",
@@ -54,12 +54,17 @@
     "README.md",
     "LICENSE"
   ],
-
   "dependencies": {
-    "@refactogent/core": "file:../core",
-    "commander": "^12.1.0"
+    "@babel/core": "^7.28.4",
+    "@babel/generator": "^7.28.3",
+    "@babel/parser": "^7.28.4",
+    "@babel/traverse": "^7.28.4",
+    "commander": "^12.1.0",
+    "js-yaml": "^4.1.0",
+    "ts-morph": "^20.0.0"
   },
   "devDependencies": {
+    "@babel/types": "^7.28.4",
     "@jest/globals": "^30.1.2",
     "@types/commander": "^2.12.5",
     "@types/jest": "^29.5.12",
@@ -68,9 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
-
     "jest": "^29.7.0",
-
     "prettier": "^3.3.3",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
