--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -53,14 +53,15 @@
   "dependencies": {
     "glob": "^10.3.10",
     "js-yaml": "^4.1.0",
+    "path-scurry": "^1.11.1",
     "ts-morph": "^20.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^30.1.2",
+    "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.11.30",
-    "@types/glob": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
