--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -5,13 +5,16 @@
   "main": "build/index.js",
   "type": "module",
   "bin": {
-    "refactogent-mcp": "./build/index.js"
+    "refactogent-mcp": "build/index.js"
   },
   "files": [
     "build",
     "README.md",
     "LICENSE"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc && node -e \"require('fs').chmodSync('build/index.js', '755')\"",
     "build:check": "tsc --noEmit",
@@ -42,7 +45,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/khaliqgant/refactogent.git",
+    "url": "git+https://github.com/khaliqgant/refactogent.git",
     "directory": "packages/mcp-server"
   },
   "bugs": {
